# pyspark-exercises

./: README.md
prueba-tecnica/parte1/: docker-compose.yaml  pyproject.toml  spark.py
prueba-tecnica/parte2/data/: business_tables.json  origins_tables.json
prueba-tecnica/parte2/src/: main.py
