[tool.poetry]
name = "parte1"
version = "0.1.0"
description = ""
authors = ["Ferran <f.marquez@altostratus.es>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = {extras = ["sql"], version = "^3.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
